--- a/flask-deployment.yaml
+++ b/flask-deployment.yaml
@@ -23,6 +23,13 @@ spec:
         envFrom:
           - secretRef:
               name: llmops-secrets    
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "250m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
 
 ---
 apiVersion: v1
