--- a/prometheus/prometheus-deployment.yaml
+++ b/prometheus/prometheus-deployment.yaml
@@ -20,6 +20,13 @@ spec:
           - "--config.file=/etc/prometheus/prometheus.yml"
         ports:
           - containerPort: 9090
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
         volumeMounts:
           - name: config-volume
             mountPath: /etc/prometheus  
