--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,6 @@
-FROM Python:3.10-slim
+FROM python:3.10-slim-bullseye
+
+# RUN apt-get update && apt-get upgrade -y && apt-get clean
 
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
