--- a/DockerFile
+++ b/DockerFile
@@ -1,27 +1,27 @@
-FROM python:3.10-slim-bullseye
+## Parent image
+FROM python:3.10-slim
 
-# RUN apt-get update && apt-get upgrade -y && apt-get clean
-
-
+## Essential environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
+## Work directory inside the docker container
+WORKDIR /app
 
-WORKDIR /app 
-
-
+## Installing system dependancies
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
+## Copying ur all contents from local to app
 COPY . .
 
-
+## Run setup.py
 RUN pip install --no-cache-dir -e .
 
-
+# Used PORTS
 EXPOSE 5000
 
-
-CMD ["python","app.py"]
+# Run the app 
+CMD ["python", "app.py"]
