--- a/DockerFile
+++ b/DockerFile
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -y \
 
 ## Copying ur all contents from local to app
 COPY . .
+RUN pip install torch
 
 ## Run setup.py
 RUN pip install --no-cache-dir -e .
