--- a/DockerFile
+++ b/DockerFile
@@ -1,28 +1,23 @@
-## Parent image
-FROM python:3.10-slim
+FROM python:3.10-slim-bullseye
 
-## Essential environment variables
+RUN apt-get update && apt-get upgrade -y && apt-get clean
+
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
-## Work directory inside the docker container
 WORKDIR /app
 
-## Installing system dependancies
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-## Copying ur all contents from local to app
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
-RUN pip install torch
 
-## Run setup.py
-RUN pip install --no-cache-dir -e .
-
-# Used PORTS
 EXPOSE 5000
 
-# Run the app 
 CMD ["python", "app.py"]
