--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 GROQ_API_KEY="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"
-HF_TOKEN="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"
+HF_TOKEN="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"
 HUGGINGFACEHUB_API_KEY="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"
+
+
+# kubectl create secret generic llmops-secrets \
+#   --from-literal=GROQ_API_KEY="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" \
+#   --from-literal=HF_TOKEN="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" \
+#   --from-literal=HUGGINGFACEHUB_API_TOKEN="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"
