--- a/flask-deployment.yaml
+++ b/flask-deployment.yaml
@@ -30,7 +30,7 @@ kind: Service
 metadata:
   name: flask-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: flask
   ports:
