update type to nodeport grafana

--- a/grafana/grafana-deployment.yaml
+++ b/grafana/grafana-deployment.yaml
@@ -18,15 +18,7 @@ spec:
           image: grafana/grafana
           ports:
             - containerPort: 3000     
-          resources:
-            
-            requests:
-              cpu: 500m       # Request: half a CPU core
-              memory: 512Mi   # Request: 512MB RAM
-            limits:
-              cpu: 1          # Limit: 1 CPU core
-              memory: 1Gi     # Limit: 1GB RAM
-
+         
 ---
 apiVersion: v1
 kind: Service 
@@ -34,6 +26,7 @@ metadata:
   name: grafana-service
   namespace: monitoring
 spec:
+  type: NodePort
   selector:
     app: grafana
   ports:
